# target-intercom

./: .gitignore  README.md  pyproject.toml
.secrets/: .gitignore
target_intercom/: __init__.py  client.py  sinks.py  target.py
